完成了导航栏以及favicon小图标的制作。

--- a/index.html
+++ b/index.html
@@ -3,10 +3,91 @@
 <head>
 	<meta charset="UTF-8">
 	<title>尹博文博客—做一个热爱生活的分享者！</title>
+	<link rel="shortcut icon" href="favicon.ico" />
 	<link type="text/css" rel="stylesheet" href="css/index.css">
+	<script src="scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery.easing.js" type="text/javascript"></script>
+	<script src="scripts/common.js" type="text/javascript"></script>
 </head>
 <body>
 <!--顶部图片-->
-<div id="top_pic"></div>
+<div id="top_pic">
+	<div id="domain">
+		<div id="sign"><img src="images/sign.jpg" alt="我的签章" /></div>
+		<div id="link">
+			<div id="saner">尹博文个人博客</div>
+		    <a href="javascript:;"><div id="myDomain">http://www.enwise.cn</div></a>
+	    </div>
+	</div>
+</div>
+
+<!--导航栏部分-->
+<div class="nav">
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#e8443a;"><span>首页</span></div>
+				<div class="s-mod-cur" style="background:#d92e24;"><span>Home</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#aa5096;"><span>在路上</span></div>
+				<div class="s-mod-cur" style="background:#922a7b;"><span>Travel</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#1CA1E2;"><span>书法</span></div>
+				<div class="s-mod-cur" style="background:#1182BA;"><span>Writing</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#FFD302;"><span>国学</span></div>
+				<div class="s-mod-cur" style="background:#EAC203;"><span>Chinese Culture</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#0C6DB2;"><span>博文</span></div>
+				<div class="s-mod-cur" style="background:#09578E;"><span>Blog</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#8DC027;"><span>项目</span></div>
+				<div class="s-mod-cur" style="background:#76A31B;"><span>Project</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#FF0198;"><span>前端开发</span></div>
+				<div class="s-mod-cur" style="background:#D80683;"><span>Front-End</span></div>
+			</div>
+		</div>
+	</a>
+	<a href="javascript:;">
+		<div class="s-mod-item">
+			<div class="s-mod-wrap">
+				<div class="s-mod-def" style="background:#914ae2; width:133px;"><span>博主档案</span></div>
+				<div class="s-mod-cur" style="background:#7d33d0; width:133px;"><span></span>About me</div>
+			</div>
+		</div>
+	</a>
+
+</div>
 </body>
 </html>
