完成了回到顶部按钮的制作。IE6真是个爷爷，不支持fixed定位。

--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
 			</div>
 		</div>
 	</a>
-
 </div>
+
+<!--回到顶部部分-->
+	<a href="javascript:;"><div id="goTopDiv" title="返回顶部"></div></a>
 </body>
 </html>
