实现了当原导航栏消失时自动从窗口顶部弹出新导航栏的功能。

--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
 	</a>
 </div>
 
+<!--当页面滚动至原来的导航栏消失是从顶部弹出新导航栏-->
+<ul id="navigation">
+            <li class="home"><a href=""><span>首页</span></a></li>
+            <li class="travel"><a href=""><span>在路上</span></a></li>
+            <li class="writing"><a href=""><span>书法</span></a></li>
+            <li class="chineseCulture"><a href=""><span>国学</span></a></li>
+            <li class="blog"><a href=""><span>博文</span></a></li>
+            <li class="project"><a href=""><span>项目</span></a></li>
+            <li class="frontEnd"><a href=""><span>前端开发</span></a></li>
+            <li class="aboutMe"><a href=""><span>博主档案</span></a></li>
+        </ul>
+
 <!--回到顶部部分-->
 	<a href="javascript:;"><div id="goTopDiv" title="返回顶部"></div></a>
 </body>
