--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 	<title>尹博文博客—做一个热爱生活的分享者！</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link type="text/css" rel="stylesheet" href="css/index.css">
+	<link type="text/css" rel="stylesheet" href="css/jquery.mPlayer.css" />
 	<script src="scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
 	<script src="scripts/jquery.easing.js" type="text/javascript"></script>
 	<script src="scripts/common.js" type="text/javascript"></script>
+	<script type="text/javascript" src="scripts/jquery.mPlayer.js"></script>
+
 </head>
 <body>
 <!--顶部图片-->
@@ -19,6 +22,9 @@
 		    <a href="javascript:;"><div id="myDomain">http://www.enwise.cn</div></a>
 	    </div>
 	</div>
+	<!--音乐播放器部分-->
+<div id="music"></div>
+
 </div>
 
 <!--导航栏部分-->
@@ -100,6 +106,7 @@
             <li class="frontEnd"><a href=""><span>前端开发</span></a></li>
             <li class="aboutMe"><a href=""><span>博主档案</span></a></li>
         </ul>
+
 
 <!--回到顶部部分-->
 	<a href="javascript:;"><div id="goTopDiv" title="返回顶部"></div></a>
