--- a/index.html
+++ b/index.html
@@ -110,5 +110,32 @@
 
 <!--回到顶部部分-->
 	<a href="javascript:;"><div id="goTopDiv" title="返回顶部"></div></a>
+
+<!--主页左侧的最新博文部分-->
+<div class="newBlogWrap">
+	<div id="homeBlog001"  class="blog">
+		<div class="authorPic"></div>
+		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
+		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+	</div>
+</div>
+
+<div class="newBlogWrap">
+	<div id="homeBlog001"  class="blog">
+		<div class="authorPic"></div>
+		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
+		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+	</div>
+</div>
+
+
+<!--主页右侧部分-->
+<div id="homeLeft"></div>
 </body>
 </html>
+
+
