--- a/index.html
+++ b/index.html
@@ -113,7 +113,27 @@
 
 <!--主页左侧的最新博文部分-->
 <div class="newBlogWrap">
-	<div id="homeBlog001"  class="blog">
+	<div id="homeBlog004"  class="blog">
+		<div class="authorPic"></div>
+		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
+		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+	</div>
+</div>
+
+<div class="newBlogWrap">
+	<div id="homeBlog003"  class="blog">
+		<div class="authorPic"></div>
+		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
+		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+	</div>
+</div>
+
+<div class="newBlogWrap">
+	<div id="homeBlog002"  class="blog">
 		<div class="authorPic"></div>
 		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
 		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
@@ -134,7 +154,15 @@
 
 
 <!--主页右侧部分-->
-<div id="homeLeft"></div>
+<div id="homeRight">
+	<!--个人新浪微博展示-->
+	<iframe id="microBlog" width="240" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=240&height=550&fansRow=2&ptype=1&speed=0&skin=10&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=1781097910&verifier=985d08b5&dpc=1"></iframe>
+    <!--扫码加微信-->
+	<div id="weChat">
+		<div id="weChatPic"><img src="images/weChatPic.jpg" alt="微信二维码"></div>
+		<div id="weChatDesc">微信扫描二维码关注公众号</div>
+    </div>
+</div>
 </body>
 </html>
 
