主页左侧的布局基本完成。

--- a/index.html
+++ b/index.html
@@ -162,6 +162,26 @@
 		<div id="weChatPic"><img src="images/weChatPic.jpg" alt="微信二维码"></div>
 		<div id="weChatDesc">微信扫描二维码关注公众号</div>
     </div>
+    <!--友情链接部分-->
+    <div id="homeLinks">
+    	<div id="homeLinkTitle">友情链接</div>
+    	<div id="links">
+    		<ul class="links">
+    			<li><a href="http://ued.taobao.com/blog/" target="_blank">淘宝UED</a></li>
+    			<li><a href="http://mux.baidu.com/" target="_blank">百度MUX</a></li>
+    			<li><a href="http://www.aliued.cn/" target="_blank">阿里巴巴中文站UED</a></li>
+    			<li><a href="http://cdc.tencent.com/" target="_blank">腾讯CDC</a></li>
+    			<li><a href="http://mued.sohu.com/" target="_blank">搜狐MUED</a></li>
+    			<li><a href="http://www.uisdc.com/" target="_blank">优秀网页设计联盟</a></li>
+    			<li><a href="http://hao.uisdc.com/" target="_blank">设计师网址导航</a></li>
+    			<li><a href="http://tool.oschina.net/" target="_blank">在线文档与工具</a></li>
+    			<li><a href="https://github.com/" target="_blank">Github主页</a></li>
+    			<li><a href="www.seu.edu.cn" target="_blank">东南大学(SEU)</a></li>
+    			<li><a href="http://www.syseu.cn/" target="_blank">东南大学苏州研究院</a></li>
+    			<li><a href="http://cose-sz.seu.edu.cn/" target="_blank">东南大学软件学院(苏州)</a></li>
+    		</ul>
+    	</div>
+    </div>
 </div>
 </body>
 </html>
