完成了底部版权说明的制作。

--- a/index.html
+++ b/index.html
@@ -176,12 +176,22 @@
     			<li><a href="http://hao.uisdc.com/" target="_blank">设计师网址导航</a></li>
     			<li><a href="http://tool.oschina.net/" target="_blank">在线文档与工具</a></li>
     			<li><a href="https://github.com/" target="_blank">Github主页</a></li>
-    			<li><a href="www.seu.edu.cn" target="_blank">东南大学(SEU)</a></li>
+    			<li><a href="http://www.seu.edu.cn" target="_blank">东南大学(SEU)</a></li>
     			<li><a href="http://www.syseu.cn/" target="_blank">东南大学苏州研究院</a></li>
     			<li><a href="http://cose-sz.seu.edu.cn/" target="_blank">东南大学软件学院(苏州)</a></li>
     		</ul>
     	</div>
     </div>
+</div>
+<!--页面跳转部分-->
+<div id="pageSwitch">
+	<span class="disabled">&lt; </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> 
+	&gt; </a>
+</div>
+<!--版权说明部分-->
+<div id="copyright">
+	<div id="copyDesc"><span>CopyRight&nbsp;©&nbsp;2014&nbsp;Saner.All rights reserved.</span></div>
+	<div id="borderBottom"></div>
 </div>
 </body>
 </html>
