--- a/blogModel.html
+++ b/blogModel.html
@@ -4,13 +4,10 @@
 	<meta charset="UTF-8">
 	<title>尹博文博客—做一个热爱生活的分享者！</title>
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link type="text/css" rel="stylesheet" href="css/index.css">
-	<link type="text/css" rel="stylesheet" href="css/jquery.mPlayer.css" />
+	<link type="text/css" rel="stylesheet" href="css/blogPage.css">
 	<script src="scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
 	<script src="scripts/jquery.easing.js" type="text/javascript"></script>
 	<script src="scripts/common.js" type="text/javascript"></script>
-	<script type="text/javascript" src="scripts/jquery.mPlayer.js"></script>
-
 </head>
 <body>
 <!--顶部图片-->
@@ -22,8 +19,6 @@
 		    <a href="javascript:;"><div id="myDomain">http://www.enwise.cn</div></a>
 	    </div>
 	</div>
-	<!--音乐播放器部分-->
-<div id="music"></div>
 
 </div>
 
@@ -111,49 +106,19 @@
 <!--回到顶部部分-->
 	<a href="javascript:;"><div id="goTopDiv" title="返回顶部"></div></a>
 
-<!--主页左侧的最新博文部分-->
-<div class="newBlogWrap">
-	<div id="homeBlog004"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
+<!--博文主题部分-->
 
 <div class="newBlogWrap">
-	<div id="homeBlog003"  class="blog">
+	<div class="blog">
 		<div class="authorPic"></div>
 		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>	
 	</div>
-</div>
-
-<div class="newBlogWrap">
-	<div id="homeBlog002"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
-
-<div class="newBlogWrap">
-	<div id="homeBlog001"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
+	<div id="content"></div>
+</div>	
 
 
-<!--主页右侧部分-->
+<!--右侧部分-->
 <div id="homeRight">
 	<!--个人新浪微博展示-->
 	<iframe id="microBlog" width="240" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=240&height=550&fansRow=2&ptype=1&speed=0&skin=10&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=1781097910&verifier=985d08b5&dpc=1"></iframe>
@@ -182,11 +147,6 @@
     		</ul>
     	</div>
     </div>
-</div>
-<!--页面跳转部分-->
-<div id="pageSwitch">
-	<span class="disabled">&lt; </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> 
-	&gt; </a>
 </div>
 <!--版权说明部分-->
 <div id="copyright">
