--- a/blogModel.html
+++ b/blogModel.html
@@ -3,17 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>尹博文博客—做一个热爱生活的分享者！</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link type="text/css" rel="stylesheet" href="css/blogPage.css">
-	<script src="scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
-	<script src="scripts/jquery.easing.js" type="text/javascript"></script>
-	<script src="scripts/common.js" type="text/javascript"></script>
+	<link rel="shortcut icon" href="../../favicon.ico" />
+	<link type="text/css" rel="stylesheet" href="../../css/blogPage.css">
+	<script src="../../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../../scripts/jquery.easing.js" type="text/javascript"></script>
+	<script src="../../scripts/common.js" type="text/javascript"></script>
 </head>
 <body>
 <!--顶部图片-->
 <div id="top_pic">
 	<div id="domain">
-		<div id="sign"><img src="images/sign.jpg" alt="我的签章" /></div>
+		<div id="sign"><img src="../../images/sign.jpg" alt="我的签章" /></div>
 		<div id="link">
 			<div id="saner">尹博文个人博客</div>
 		    <a href="javascript:;"><div id="myDomain">http://www.enwise.cn</div></a>
@@ -124,7 +124,7 @@
 	<iframe id="microBlog" width="240" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=240&height=550&fansRow=2&ptype=1&speed=0&skin=10&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=1781097910&verifier=985d08b5&dpc=1"></iframe>
     <!--扫码加微信-->
 	<div id="weChat">
-		<div id="weChatPic"><img src="images/weChatPic.jpg" alt="微信二维码"></div>
+		<div id="weChatPic"><img src="../../images/weChatPic.jpg" alt="微信二维码"></div>
 		<div id="weChatDesc">微信扫描二维码关注公众号</div>
     </div>
     <!--友情链接部分-->
