--- a/blogs/volunteering/20140517.html
+++ b/blogs/volunteering/20140517.html
@@ -3,27 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<title>尹博文博客—做一个热爱生活的分享者！</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link type="text/css" rel="stylesheet" href="css/index.css">
-	<link type="text/css" rel="stylesheet" href="css/jquery.mPlayer.css" />
-	<script src="scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
-	<script src="scripts/jquery.easing.js" type="text/javascript"></script>
-	<script src="scripts/common.js" type="text/javascript"></script>
-	<script type="text/javascript" src="scripts/jquery.mPlayer.js"></script>
-
+	<link rel="shortcut icon" href="../../favicon.ico" />
+	<link type="text/css" rel="stylesheet" href="../../css/blogPage.css">
+	<script src="../../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../../scripts/jquery.easing.js" type="text/javascript"></script>
+	<script src="../../scripts/common.js" type="text/javascript"></script>
 </head>
 <body>
 <!--顶部图片-->
 <div id="top_pic">
 	<div id="domain">
-		<div id="sign"><img src="images/sign.jpg" alt="我的签章" /></div>
+		<div id="sign"><img src="../../images/sign.jpg" alt="我的签章" /></div>
 		<div id="link">
 			<div id="saner">尹博文个人博客</div>
 		    <a href="javascript:;"><div id="myDomain">http://www.enwise.cn</div></a>
 	    </div>
 	</div>
-	<!--音乐播放器部分-->
-<div id="music"></div>
 
 </div>
 
@@ -111,55 +106,44 @@
 <!--回到顶部部分-->
 	<a href="javascript:;"><div id="goTopDiv" title="返回顶部"></div></a>
 
-<!--主页左侧的最新博文部分-->
-<div class="newBlogWrap">
-	<div id="homeBlog004"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="blogs/volunteering/20140517.html">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">志愿活动</a></div>
-		<div class="blogPic"><a href="blogs/volunteering/20140517.html"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="blogs/volunteering/20140517.html">阅读全文>></a></div>
-	</div>
-</div>
+<!--博文主题部分-->
 
 <div class="newBlogWrap">
-	<div id="homeBlog003"  class="blog">
+	<div class="blog">
 		<div class="authorPic"></div>
 		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">志愿活动</a></div>	
 	</div>
-</div>
-
-<div class="newBlogWrap">
-	<div id="homeBlog002"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
+	<div id="content">
+		<div class="blogPic"><div><img src="../../images/blogs/20140517-01.jpg" alt=""></div></div>
+		<div class="blogPara">&nbsp;&nbsp;&nbsp;&nbsp;意、有意注意、记忆等认知加工来提升广告质量与效果。
+这一期就来了解下联想与情感决策，最终目的是令用户在有限条件下完成对信息的深层处理，增加对广告的认同感与好感度，产生点击广告的行为。
+一、联想（包含意象、颜色联想、说服）
+联想是指：由当前感知的事物回忆起有关的另一件事物，或由想起的一件事物又想起另一件事物，叫做联想。意象是指，意是内在抽象的心意，象是外在具体的物象；意源于内心并借助于象来表达，象其实是意的寄托物，通过具体的物象来表达内在的意义与感情。
+1、形式意象：字体、图片与banner内容相适宜
+意象在广告设计中借用素材形式来表达培训内容。素材形式属于象，是一种具体化的物象；广告内容属于意，蕴含着一定的内容，通过形式来表达内容不仅能更直观传达广告内容，且能使banner设计新颖，刺激物的新颖有助于吸引用户的注意。
+如下图示例，店家在售卖植物的广告中，运用意象手法，文字产生出一种植物的具象化感觉，使得广告看起来更为活泼新颖
+		</div>
+		<div class="blogPic"><div><img src="../../images/blogs/20140517-01.jpg" alt=""></div></div>
+		<div class="blogPara">&nbsp;&nbsp;&nbsp;&nbsp;意、有意注意、记忆等认知加工来提升广告质量与效果。
+这一期就来了解下联想与情感决策，最终目的是令用户在有限条件下完成对信息的深层处理，增加对广告的认同感与好感度，产生点击广告的行为。
+一、联想（包含意象、颜色联想、说服）
+联想是指：由当前感知的事物回忆起有关的另一件事物，或由想起的一件事物又想起另一件事物，叫做联想。意象是指，意是内在抽象的心意，象是外在具体的物象；意源于内心并借助于象来表达，象其实是意的寄托物，通过具体的物象来表达内在的意义与感情。
+1、形式意象：字体、图片与banner内容相适宜
+意象在广告设计中借用素材形式来表达培训内容。素材形式属于象，是一种具体化的物象；广告内容属于意，蕴含着一定的内容，通过形式来表达内容不仅能更直观传达广告内容，且能使banner设计新颖，刺激物的新颖有助于吸引用户的注意。
+如下图示例，店家在售卖植物的广告中，运用意象手法，文字产生出一种植物的具象化感觉，使得广告看起来更为活泼新颖
+		</div>
 	</div>
-</div>
-
-<div class="newBlogWrap">
-	<div id="homeBlog001"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
+</div>	
 
 
-<!--主页右侧部分-->
+<!--右侧部分-->
 <div id="homeRight">
 	<!--个人新浪微博展示-->
 	<iframe id="microBlog" width="240" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=240&height=550&fansRow=2&ptype=1&speed=0&skin=10&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=1781097910&verifier=985d08b5&dpc=1"></iframe>
     <!--扫码加微信-->
 	<div id="weChat">
-		<div id="weChatPic"><img src="images/weChatPic.jpg" alt="微信二维码"></div>
+		<div id="weChatPic"><img src="../../images/weChatPic.jpg" alt="微信二维码"></div>
 		<div id="weChatDesc">微信扫描二维码关注公众号</div>
     </div>
     <!--友情链接部分-->
@@ -182,11 +166,6 @@
     		</ul>
     	</div>
     </div>
-</div>
-<!--页面跳转部分-->
-<div id="pageSwitch">
-	<span class="disabled">&lt; </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> 
-	&gt; </a>
 </div>
 <!--版权说明部分-->
 <div id="copyright">
