完成了个链接和页面之间的跳转逻辑，可能还有些小Bug。

--- a/blogs/volunteering/20140517.html
+++ b/blogs/volunteering/20140517.html
@@ -24,7 +24,7 @@
 
 <!--导航栏部分-->
 <div class="nav">
-	<a href="javascript:;">
+	<a href="../../index.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#e8443a;"><span>首页</span></div>
@@ -32,7 +32,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../preview/onTheRoad/onTheRoadList01.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#aa5096;"><span>在路上</span></div>
@@ -40,47 +40,47 @@
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../preview/volunteering/volunteeringList01.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
-				<div class="s-mod-def" style="background:#1CA1E2;"><span>书法</span></div>
-				<div class="s-mod-cur" style="background:#1182BA;"><span>Writing</span></div>
+				<div class="s-mod-def" style="background:#1CA1E2;"><span>志愿活动</span></div>
+				<div class="s-mod-cur" style="background:#1182BA;"><span>Volunteering</span></div>
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../preview/calligraphy/calligraphyList01.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
-				<div class="s-mod-def" style="background:#FFD302;"><span>国学</span></div>
-				<div class="s-mod-cur" style="background:#EAC203;"><span>Chinese Culture</span></div>
+				<div class="s-mod-def" style="background:#FFD302;"><span>书法怡情</span></div>
+				<div class="s-mod-cur" style="background:#EAC203;"><span>Calligraphy</span></div>
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../preview/IT/ITList01.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
-				<div class="s-mod-def" style="background:#0C6DB2;"><span>博文</span></div>
-				<div class="s-mod-cur" style="background:#09578E;"><span>Blog</span></div>
+				<div class="s-mod-def" style="background:#0C6DB2;"><span>IT技术</span></div>
+				<div class="s-mod-cur" style="background:#09578E;"><span>IT Tech</span></div>
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../preview/life/lifeList01.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
-				<div class="s-mod-def" style="background:#8DC027;"><span>项目</span></div>
-				<div class="s-mod-cur" style="background:#76A31B;"><span>Project</span></div>
+				<div class="s-mod-def" style="background:#8DC027;"><span>杂谈随想</span></div>
+				<div class="s-mod-cur" style="background:#76A31B;"><span>About Life</span></div>
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../preview/posPsy/posPsyList01.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
-				<div class="s-mod-def" style="background:#FF0198;"><span>前端开发</span></div>
-				<div class="s-mod-cur" style="background:#D80683;"><span>Front-End</span></div>
+				<div class="s-mod-def" style="background:#FF0198;"><span>积极心理学</span></div>
+				<div class="s-mod-cur" style="background:#D80683;"><span>Pos Psychology</span></div>
 			</div>
 		</div>
 	</a>
-	<a href="javascript:;">
+	<a href="../../aboutMe.html" target="_blank">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#914ae2; width:133px;"><span>博主档案</span></div>
@@ -92,15 +92,16 @@
 
 <!--当页面滚动至原来的导航栏消失是从顶部弹出新导航栏-->
 <ul id="navigation">
-            <li class="home"><a href=""><span>首页</span></a></li>
-            <li class="travel"><a href=""><span>在路上</span></a></li>
-            <li class="writing"><a href=""><span>书法</span></a></li>
-            <li class="chineseCulture"><a href=""><span>国学</span></a></li>
-            <li class="myBlog"><a href=""><span>博文</span></a></li>
-            <li class="project"><a href=""><span>项目</span></a></li>
-            <li class="frontEnd"><a href=""><span>前端开发</span></a></li>
-            <li class="aboutMe"><a href=""><span>博主档案</span></a></li>
-        </ul>
+            <li class="home"><a href="../../index.html" target="_blank"><span>首页</span></a></li>
+            <li class="travel"><a href="../../preview/onTheRoad/onTheRoadList01.html" target="_blank"><span>在路上</span></a></li>
+            <li class="volunteering"><a href="../../preview/volunteering/volunteeringList01.html" target="_blank"><span>志愿活动</span></a></li>
+            <li class="calligraphy"><a href="../../preview/calligraphy/calligraphyList01.html" target="_blank"><span>书法怡情</span></a></li>
+            <li class="ITTech"><a href="../../preview/IT/ITList01.html" target="_blank"><span>IT技术</span></a></li>
+            <li class="aboutLife"><a href="../../preview/life/lifeList01.html" target="_blank"><span>杂谈随想</span></a></li>
+            <li class="PosPsy"><a href="../../preview/posPsy/posPsyList01.html" target="_blank"><span>积极心理学</span></a></li>
+            <li class="aboutMe"><a href="../../aboutMe.html" target="_blank"><span>博主档案</span></a></li>
+</ul>
+
 
 
 <!--回到顶部部分-->
