--- a/preview/life/lifeList01.html
+++ b/preview/life/lifeList01.html
@@ -2,34 +2,29 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>尹博文博客—做一个热爱生活的分享者！</title>
-	<link rel="shortcut icon" href="favicon.ico" />
-	<link type="text/css" rel="stylesheet" href="css/index.css">
-	<link type="text/css" rel="stylesheet" href="css/jquery.mPlayer.css" />
-	<script src="scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
-	<script src="scripts/jquery.easing.js" type="text/javascript"></script>
-	<script src="scripts/common.js" type="text/javascript"></script>
-	<script type="text/javascript" src="scripts/jquery.mPlayer.js"></script>
+	<title>杂谈随想</title>
+	<link rel="shortcut icon" href="../../favicon.ico" />
+	<link type="text/css" rel="stylesheet" href="../../css/index.css">
+	<script src="../../scripts/jquery-1.11.1.min.js" type="text/javascript"></script>
+	<script src="../../scripts/jquery.easing.js" type="text/javascript"></script>
+	<script src="../../scripts/common.js" type="text/javascript"></script>
 
 </head>
 <body>
 <!--顶部图片-->
 <div id="top_pic">
 	<div id="domain">
-		<div id="sign"><img src="images/sign.jpg" alt="我的签章" /></div>
+		<div id="sign"><img src="../../images/sign.jpg" alt="我的签章" /></div>
 		<div id="link">
 			<div id="saner">尹博文个人博客</div>
 		    <a href="javascript:;"><div id="myDomain">http://www.enwise.cn</div></a>
 	    </div>
 	</div>
-	<!--音乐播放器部分-->
-<div id="music"></div>
-
 </div>
 
 <!--导航栏部分-->
 <div class="nav">
-	<a href="index.html">
+	<a href="../../index.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#e8443a;"><span>首页</span></div>
@@ -37,7 +32,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="preview/onTheRoad/onTheRoadList01.html" target="_blank">
+	<a href="../onTheRoad/onTheRoadList01.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#aa5096;"><span>在路上</span></div>
@@ -45,7 +40,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="preview/volunteering/volunteeringList01.html" target="_blank">
+	<a href="../volunteering/volunteeringList01.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#1CA1E2;"><span>志愿活动</span></div>
@@ -53,7 +48,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="preview/calligraphy/calligraphyList01.html" target="_blank">
+	<a href="../calligraphy/calligraphyList01.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#FFD302;"><span>书法怡情</span></div>
@@ -61,7 +56,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="preview/IT/ITList01.html" target="_blank">
+	<a href="../IT/ITList01.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#0C6DB2;"><span>IT技术</span></div>
@@ -69,7 +64,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="preview/life/lifeList01.html" target="_blank">
+	<a href="../life/lifeList01.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#8DC027;"><span>杂谈随想</span></div>
@@ -77,7 +72,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="preview/posPsy/posPsyList01.html" target="_blank">
+	<a href="../posPsy/posPsyList01.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#FF0198;"><span>积极心理学</span></div>
@@ -85,7 +80,7 @@
 			</div>
 		</div>
 	</a>
-	<a href="aboutMe.html" target="_blank">
+	<a href="../../aboutMe.html">
 		<div class="s-mod-item">
 			<div class="s-mod-wrap">
 				<div class="s-mod-def" style="background:#914ae2; width:133px;"><span>博主档案</span></div>
@@ -97,15 +92,16 @@
 
 <!--当页面滚动至原来的导航栏消失是从顶部弹出新导航栏-->
 <ul id="navigation">
-            <li class="home"><a href="index.html"><span>首页</span></a></li>
-            <li class="travel"><a href="preview/onTheRoad/onTheRoadList01.html" target="_blank"><span>在路上</span></a></li>
-            <li class="volunteering"><a href="preview/volunteering/volunteeringList01.html" target="_blank"><span>志愿活动</span></a></li>
-            <li class="calligraphy"><a href="preview/calligraphy/calligraphyList01.html" target="_blank"><span>书法怡情</span></a></li>
-            <li class="ITTech"><a href="preview/IT/ITList01.html" target="_blank"><span>IT技术</span></a></li>
-            <li class="aboutLife"><a href="preview/life/lifeList01.html" target="_blank"><span>杂谈随想</span></a></li>
-            <li class="PosPsy"><a href="preview/posPsy/posPsyList01.html" target="_blank"><span>积极心理学</span></a></li>
-            <li class="aboutMe"><a href="aboutMe.html" target="_blank"><span>博主档案</span></a></li>
+            <li class="home"><a href="../../index.html"><span>首页</span></a></li>
+            <li class="travel"><a href="../onTheRoad/onTheRoadList01.html"><span>在路上</span></a></li>
+            <li class="volunteering"><a href="../volunteering/volunteeringList01.html"><span>志愿活动</span></a></li>
+            <li class="calligraphy"><a href="../calligraphy/calligraphyList01.html"><span>书法怡情</span></a></li>
+            <li class="ITTech"><a href="../IT/ITList01.html"><span>IT技术</span></a></li>
+            <li class="aboutLife"><a href="../life/lifeList01.html"><span>杂谈随想</span></a></li>
+            <li class="PosPsy"><a href="../posPsy/posPsyList01.html"><span>积极心理学</span></a></li>
+            <li class="aboutMe"><a href="../../aboutMe.html"><span>博主档案</span></a></li>
 </ul>
+
 
 
 <!--回到顶部部分-->
@@ -117,7 +113,7 @@
 		<div class="authorPic"></div>
 		<div class="title"><a href="blogs/volunteering/20140517.html">苏州太湖东山植树活动</a></div>
 		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">志愿活动</a></div>
-		<div class="blogPic"><a href="blogs/volunteering/20140517.html"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogPic"><a href="blogs/volunteering/20140517.html"><img src="../../images/blogPic001.jpg" /></a></div>
 		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="blogs/volunteering/20140517.html">阅读全文>></a></div>
 	</div>
 </div>
@@ -127,7 +123,7 @@
 		<div class="authorPic"></div>
 		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
 		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="../../images/blogPic001.jpg" /></a></div>
 		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
 	</div>
 </div>
@@ -137,7 +133,7 @@
 		<div class="authorPic"></div>
 		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
 		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="../../images/blogPic001.jpg" /></a></div>
 		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
 	</div>
 </div>
@@ -147,7 +143,7 @@
 		<div class="authorPic"></div>
 		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
 		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
+		<div class="blogPic"><a href="javascript:;"><img src="../../images/blogPic001.jpg" /></a></div>
 		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
 	</div>
 </div>
@@ -159,7 +155,7 @@
 	<iframe id="microBlog" width="240" height="550" class="share_self"  frameborder="0" scrolling="no" src="http://widget.weibo.com/weiboshow/index.php?language=&width=240&height=550&fansRow=2&ptype=1&speed=0&skin=10&isTitle=1&noborder=1&isWeibo=1&isFans=1&uid=1781097910&verifier=985d08b5&dpc=1"></iframe>
     <!--扫码加微信-->
 	<div id="weChat">
-		<div id="weChatPic"><img src="images/weChatPic.jpg" alt="微信二维码"></div>
+		<div id="weChatPic"><img src="../../images/weChatPic.jpg" alt="微信二维码"></div>
 		<div id="weChatDesc">微信扫描二维码关注公众号</div>
     </div>
     <!--友情链接部分-->
