--- a/index.html
+++ b/index.html
@@ -113,44 +113,17 @@
 
 <!--主页左侧的最新博文部分-->
 <div class="newBlogWrap">
-	<div id="homeBlog004"  class="blog">
+	<div class="blog" style="height:480px;">
 		<div class="authorPic"></div>
-		<div class="title"><a href="blogs/volunteering/20140517.html">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">志愿活动</a></div>
-		<div class="blogPic"><a href="blogs/volunteering/20140517.html"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="blogs/volunteering/20140517.html">阅读全文>></a></div>
+		<div class="title"><a href="blogs/onTheRoad/20140419.html" target="_blank">记人生第一次上海之旅</a></div>
+		<div class="blogTag">2014年04月19日/Saner&nbsp;&nbsp;<a href="preview/onTheRoad/onTheRoadList01.html" target="_blank">在路上</a></div>
+		<div class="blogPic"><a href="blogs/onTheRoad/20140419.html" target="_blank"><img src="images/preview/20140419.jpg" /></a></div>
+		<div class="blogDesc"><span>说来惭愧，长这么大还是第一次去被大家称之为魔都的大上海，而且这次上海之旅还是为了参加阿里巴巴实习生招聘的面试。本来面试时间被安排在4月18号的中午，可面试的前一天中午突然收到HR的电话说我的面试时间被改到当天下午5:30，无奈只好把已经买好的火车票改签到当天下午两点。</span><br><a href="blogs/onTheRoad/20140419.html" target="_blank">阅读全文>></a></div>
 	</div>
-</div>
+</div><!--创建新预览时复制此div作为模板-->
 
-<div class="newBlogWrap">
-	<div id="homeBlog003"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
 
-<div class="newBlogWrap">
-	<div id="homeBlog002"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
 
-<div class="newBlogWrap">
-	<div id="homeBlog001"  class="blog">
-		<div class="authorPic"></div>
-		<div class="title"><a href="javascript:;">苏州太湖东山植树活动</a></div>
-		<div class="blogTag">2014年05月17日/Saner&nbsp;&nbsp;<a href="javascript:;">文章类别</a></div>
-		<div class="blogPic"><a href="javascript:;"><img src="images/blogPic001.jpg" /></a></div>
-		<div class="blogDesc"><span>在古代，女子对丈夫重礼重义，而男子对妻子一样也讲究礼和义，还有恩情。男阳女阴，男刚女柔。他们互相体贴，互敬互爱。</span><br><a href="javaScript:;">阅读全文>></a></div>
-	</div>
-</div>
 
 
 <!--主页右侧部分-->
@@ -185,11 +158,11 @@
 </div>
 <!--页面跳转部分-->
 <div id="pageSwitch">
-	<span class="disabled">&lt; </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> 
+	<span class="disabled">&lt; </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=2"> 
 	&gt; </a>
 </div>
 <!--版权说明部分-->
-<div id="copyright">
+<div id="copyright" style="position:relative; top:650px;">
 	<div id="copyDesc"><span>CopyRight&nbsp;©&nbsp;2014&nbsp;Saner.All rights reserved.</span></div>
 	<div id="borderBottom"></div>
 </div>
